HTML home page created

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <a class="nav__link" href="#">News</a>
         <a class="nav__link" href="#">Shop</a>
     </nav>
+    <main>
+        <article>
+            <p>
+                Football is a beatiful sport - a lot of emotions, hapiness and much more... This is why we love it. We started as a few-guys-magazine and now
+                we can say we are professionals and best in our buisness. Here you can find a lot of stuff. From recent match resultes to scandals. We believe
+                that through football one can develop themselves and make lifelong aquantices. Hope this page will bring you ton of good & quality content.
+            </p>
+        </article>
+        <img src="football.png" alt="Ball">
+        <img src="football-team.png" alt="Football team">
+    </main>
   </body>
 </html>
