HTML home page upgraded

--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
         <a class="nav__link" href="#">Shop</a>
     </nav>
     <main>
-        <article>
-            <p>
+        <article class="article">
+            <p class="article__paragraph">
                 Football is a beatiful sport - a lot of emotions, hapiness and much more... This is why we love it. We started as a few-guys-magazine and now
                 we can say we are professionals and best in our buisness. Here you can find a lot of stuff. From recent match resultes to scandals. We believe
                 that through football one can develop themselves and make lifelong aquantices. Hope this page will bring you ton of good & quality content.
             </p>
+            <p class="article__paragraph">
+                Now, if you don't know rules of football here are rules:
+                Football matches are played between two teams and typically last for 90 minutes. The match is divided into two halves of 45 minutes each.
+                There's a 15-minute break called half-time which separates the two halves. A match kicks off from the centre circle with
+                one team in possession of the ball. The teams switch sides after half-time, with the other team in possession and kicking off proceedings.
+                The objective of each team is to kick or head the football within the opposing team’s goalposts to score a goal. There are 11 players on
+                each side with one goalkeeper protecting the goal - being an exception he can use hands in a penalty area.
+            </p>
         </article>
-        <img src="football.png" alt="Ball">
-        <img src="football-team.png" alt="Football team">
+        <img class="image" src="football.png" alt="Ball">
+        <img class="image" src="football-team.png" alt="Football team">
     </main>
   </body>
 </html>
