--- a/shop.html
+++ b/shop.html
@@ -12,5 +12,35 @@
         <a class="nav__link" href="news.html">News</a>
         <a class="nav__link" href="shop.html">Shop</a>
     </nav>
+    <main>
+        <div class="shop-item">
+            <h3>Ball</h3>
+            <div>
+                <img class="image" src="images/ball.png">
+                <p>This is really good ball. You can play football with this one. Quality Guaranteed.</p>
+                <form>
+                    <div>
+                        <label for="input">Quantity: </label>
+                        <input class="input" id="input" type="number">
+                    </div>
+                    <input type="submit" value="Add">
+                </form>
+            </div>
+        </div>
+        <div class="shop-item">
+            <h3>Football shirt</h3>
+            <div>
+                <img class="image" src="images/football-shirt.png">
+                <p>Are you fan of Poland national team? If yes this is great! This is quality football fan-shirt. With this one your national team will surely win!</p>
+                <form>
+                    <div>
+                        <label for="input">Quantity: </label>
+                        <input class="input" id="input" type="number">
+                    </div>
+                    <input type="submit" value="Add">
+                </form>
+            </div>
+        </div>
+    </main>
   </body>
 </html>
